# mail-project

./: .gitignore  README.md  package.json  prevcode.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Filter.jsx  Footer.jsx  Header.jsx  MailBox.jsx  MailForm.jsx  Modal.jsx
mail_client/: .env  Cargo.toml  README.md
mail_client/src/: main.rs
