[package]
name = "mail_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
lettre = "0.10.0-rc.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
imap = { version = "3.0.0-alpha.14" }
native-tls = "0.2"
mailparse = "0.13"
